# xtimetracker

./: .flake8  .gitignore  .travis.yml  .watsonrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  tt.completion  tt.fish  tt.zsh-completion
LICENSES/: MIT.txt
docs/: faq.md  index.md
docs/about/: license.md  release-notes.md
docs/contributing/: coc.md  hack.md  how-to.md  pr-guidelines.md  release-new-version.md
docs/css/: tt.css
docs/img/: working-cat.gif.license
docs/user-guide/: commands.md  configuration.md
scripts/: create-completion-script.sh  fuzzer.py  gen-cli-docs.py  print_frames.py
tests/: __init__.py  conftest.py  test_autocompletion.py  test_cli.py  test_cli_utils.py  test_config.py  test_file_utils.py  test_frames.py  test_timetracker.py  test_utils.py  test_watson.py
tests/resources/autocompletion/: frames.license
tests/resources/fuzzer_data/: .gitignore
tt/: __init__.py  __main__.py  autocompletion.py  backend.py  cli.py  cli_utils.py  config.py  date_utils.py  file_utils.py  frames.py  timetracker.py  utils.py  version.py
watson/: autocompletion.py  cli.py  frames.py  utils.py  watson.py
xtimetracker/: __init__.py  __main__.py  autocompletion.py  backend.py  cli.py  cli_utils.py  config.py  date_utils.py  file_utils.py  frames.py  timetracker.py  utils.py
xtimetracker/cli/: __init__.py  add.py  autocompletion.py  cancel.py  cli.py  constants.py  start.py  status.py  stop.py  utils.py
(+1 files in other folders)
