# SPDX-FileCopyrightText: 2020 David Alfonso
#
# SPDX-License-Identifier: GPL-3.0-or-later

[metadata]
name = xtimetracker
version = attr: xtimetracker.__version__
author = David Alfonso
author_email = developer@davidalfonso.es
license = GPL-3.0-or-later AND MIT
license_files =
	LICENSES/GPL-3.0-or-later.txt
	LICENSES/MIT.txt
url = https://github.com/davidag/xtimetracker
description = Simple time tracking from the command line
long_description = file: README.md
long_description_content_type = text/markdown
keywords = time, tracker, project, management
classifiers =
	Development Status :: 3 - Alpha
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	License :: OSI Approved :: MIT License
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Environment :: Console
	Operating System :: OS Independent
	Topic :: Office/Business
	Topic :: Utilities

[options]
zip_safe = true
python_requires = >= 3.6
packages = xtimetracker
setup_requires =
	setuptools >= 46.4
install_requires =
	click ~= 7.1
	arrow ~= 0.17

[options.entry_points]
console_scripts =
	x = xtimetracker.cli.cli:cli

[bdist_wheel]
universal = true

[flake8]
ignore = E203,W503
max-line-length = 99

[mypy]
ignore_missing_imports = true
